--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android-extensions'
@@ -14,15 +13,15 @@ android {
             storePassword '3edgetech'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.app.sitaramswami"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 14
         versionName "14.0"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         signingConfig signingConfigs.config
     }
     buildTypes {
@@ -38,26 +37,25 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:$API_VERSION"
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    //noinspection GradleCompatible
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
-    implementation "com.google.android.gms:play-services-auth:$GMS_VERSION"
-    implementation 'com.google.firebase:firebase-core:15.0.2'
-    implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
-    implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "com.android.support:design:$API_VERSION"
-    implementation "com.android.support:cardview-v7:$API_VERSION"
-    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
-    implementation "com.google.android.gms:play-services-ads:$GMS_VERSION"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation "com.google.android.gms:play-services-auth:18.0.0"
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "com.squareup.retrofit2:retrofit:2.0.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.0.2"
+    implementation "com.google.android.gms:play-services-ads:15.0.1"
 
 
     implementation 'com.squareup.picasso:picasso:2.3.2'
@@ -65,5 +63,7 @@ dependencies {
 //    implementation 'com.daimajia.slider:library:1.1.5@aar'
 
     implementation 'com.commit451:PhotoView:1.2.4'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.0.7'
+
 }
 apply plugin: 'com.google.gms.google-services'
