--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,6 @@ GOOGLE_SERVICE=11.8.0
 RETROFIT_VERSION=2.0.2
 FIREBASE_VERSION=15.0.0
 GMS_VERSION=15.0.1
+android.useAndroidX=true
+android.enableJetifier=true
 
